--- a/index.html
+++ b/index.html
@@ -6,20 +6,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dynamic Time Greeting</title>
-    <!-- Load Bootstrap 5 CSS -->
 
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
   </head>
   <body>
     <!-- MORNING: 5:00 AM to 11:59 AM (Hours 5-11) -->
-    <!-- Start hidden using Bootstrap's d-none class -->
+
+    <div class="d-none-1">
+      <div class="container text-center mt-5">
+        <h1>Good Morning!</h1>
+        <p class="lead">Wishing you a bright and cheerful day ahead.</p>
+      </div>
+    </div>
 
     <!-- AFTERNOON: 12:00 PM to 5:59 PM (Hours 12-17) -->
-    <!-- Start hidden using Bootstrap's d-none class -->
+    <div class="d-none-2">
+      <div class="container text-center mt-5">
+        <h1>Good Afternoon!</h1>
+        <p class="lead">Hope you're having a productive day.</p>
+      </div>
+    </div>
 
     <!-- NIGHT: 6:00 PM to 4:59 AM (Hours 18-4) -->
-    <!-- Start hidden using Bootstrap's d-none class -->
+    <div class="d-none-3">
+      <div class="container text-center mt-5">
+        <h1>Good night!</h1>
+        <p class="lead">Relax and unwind after a long day.</p>
+      </div>
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="greetings.js"></script>
   </body>
 </html>
