Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -16,26 +16,34 @@
   <body>
     <!-- MORNING: 5:00 AM to 11:59 AM (Hours 5-11) -->
 
-    <div class="d-none-1">
-      <div class="container text-center mt-5">
-        <h1>Good Morning!</h1>
-        <p class="lead">Wishing you a bright and cheerful day ahead.</p>
+    <div class="d-none" id="morning-div">
+      <div class="morning">
+        <div class="container text-center mt-5">
+          <h1>Good Morning!</h1>
+
+          <img src="folder/winding-farm-road-through-foggy-landscape-royalty-free-image-1693423663.png" alt="">
+          <p class="lead">Wishing you a bright and cheerful day ahead.</p>
+        </div>
       </div>
     </div>
-
     <!-- AFTERNOON: 12:00 PM to 5:59 PM (Hours 12-17) -->
-    <div class="d-none-2">
-      <div class="container text-center mt-5">
-        <h1>Good Afternoon!</h1>
-        <p class="lead">Hope you're having a productive day.</p>
+
+    <div class="d-none" id="afternoon-div">
+      <div class="afternoon">
+        <div class="container text-center mt-5">
+          <h1>Good Afternoon!</h1>
+          <p class="lead">Hope you're having a productive day.</p>
+        </div>
       </div>
     </div>
-
     <!-- NIGHT: 6:00 PM to 4:59 AM (Hours 18-4) -->
-    <div class="d-none-3">
-      <div class="container text-center mt-5">
-        <h1>Good night!</h1>
-        <p class="lead">Relax and unwind after a long day.</p>
+
+    <div class="d-none" id="night-div">
+      <div class="night">
+        <div class="container text-center mt-5">
+          <h1>Good night!</h1>
+          <p class="lead">Relax and unwind after a long day.</p>
+        </div>
       </div>
     </div>
 
