refactor: update image tag for self-closing syntax and adjust script path

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container text-center mt-5">
           <h1>Good Morning!</h1>
 
-          <img src="folder/winding-farm-road-through-foggy-landscape-royalty-free-image-1693423663.png" alt="">
+          <img src="folder/winding-farm-road-through-foggy-landscape-royalty-free-image-1693423663.png" alt="" />
           <p class="lead">Wishing you a bright and cheerful day ahead.</p>
         </div>
       </div>
@@ -48,6 +48,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script src="greetings.js"></script>
+    <script src="js/greetings.js"></script>
   </body>
 </html>
