--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <!-- MORNING: 5:00 AM to 11:59 AM (Hours 5-11) -->
@@ -33,6 +34,7 @@
         <div class="container text-center mt-5">
           <h1>Good Afternoon!</h1>
           <p class="lead">Hope you're having a productive day.</p>
+         <img src="folder/green-grass-hills-under-midday-sun-19112946.png" class="slide-top">
         </div>
       </div>
     </div>
