--- a/index.html
+++ b/index.html
@@ -1,55 +1,52 @@
 <!-- @format -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dynamic Time Greeting</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet" />
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- MORNING: 5:00 AM to 11:59 AM (Hours 5-11) -->
-
+    <!-- MORNING -->
     <div class="d-none" id="morning-div">
       <div class="morning">
         <div class="container text-center mt-5">
-          <h1>Good Morning!</h1>
-
-          <img src="folder/winding-farm-road-through-foggy-landscape-royalty-free-image-1693423663.png" alt="" />
-          <p class="lead">Wishing you a bright and cheerful day ahead.</p>
+          <h1 class="slide-top">Good Morning!</h1>
+          <img class="slide-top" src="folder/winding-farm-road-through-foggy-landscape-royalty-free-image-1693423663.png" alt="Foggy morning landscape" />
+          <p class="lead slide-top">Wishing you a bright and cheerful day ahead.</p>
         </div>
       </div>
     </div>
-    <!-- AFTERNOON: 12:00 PM to 5:59 PM (Hours 12-17) -->
 
+    <!-- AFTERNOON -->
     <div class="d-none" id="afternoon-div">
       <div class="afternoon">
         <div class="container text-center mt-5">
-          <h1>Good Afternoon!</h1>
-          <p class="lead">Hope you're having a productive day.</p>
-         <img src="folder/green-grass-hills-under-midday-sun-19112946.png" class="slide-top">
+          <h1 class="slide-top">Good Afternoon!</h1>
+          <p class="lead slide-top">Hope you're having a productive day.</p>
+          <img src="folder/green-grass-hills-under-midday-sun-19112946.png" class="slide-top" alt="Sunny afternoon hills" id="mroging" />
         </div>
       </div>
     </div>
-    <!-- NIGHT: 6:00 PM to 4:59 AM (Hours 18-4) -->
 
+    <!-- NIGHT -->
     <div class="d-none" id="night-div">
       <div class="night">
         <div class="container text-center mt-5">
-          <h1>Good night!</h1>
-          <p class="lead">Relax and unwind after a long day.</p>
+          <h1 class="slide-top">Good night!</h1>
+
+          <img src="folder/Свет_от_деревни_-_panoramio.jpg" class="slide-top" alt="Village lights at night" />
+          <p class="lead slide-top">Relax and unwind after a long day.</p>
         </div>
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script src="js/greetings.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/greetings.js" defer></script>
   </body>
 </html>
